public/css/main.css
html {box-sizing: border-box;}
*, *:before, *:after {box-sizing: inherit;}

html {
  background-color: hsl(0, 0%, 0%);
  color: hsl(57, 100%, 50%);
}

nav {
  padding: 0.5em 1em;
  background-color: #111;
  text-align: center;
  margin: 1em;
}

a {
  color: #ffffff;
  text-decoration: none; 
}

nav a {
  margin-right: 1em;
  color: #ffffff;
}

h1 {
  margin-left: 0.5em;
}
h2 {
  margin: 0;
}

.green {
  color: #0F0;
}

.thread {
  border: 0.1em solid rgb(53, 53, 53);
  background-color: rgb(28, 28, 28);
  margin: 2em 1em;
  padding-bottom: 1em;

  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start
  align-items: flex-start
  align-content: flex-start
}
  .thread header {
    padding: 0.3em 1em;
    background-color: rgb(53, 53, 53);
    margin-bottom: 1em;
    border-bottom: 0.1em solid hsl(0, 0%, 8%);

    flex: 2 1 100%;
  }
    .postID,
    .name,
    .title,
    .timestamp {
      display: inline-block;
      margin: 0 .6em 0 0;
      color: hsl(57, 100%, 50%);
    }
    .title {
      font-weight: bold;
    }
    .name {
      color: hsl(0, 0%, 100%);
    }
    .thread .thumb {
      width: 30%;

      flex: 1 1 30%;
    }
    .thread .thumb img {
      width: 95%;
      margin-left: 1em;
    }
    .thread .message {
      width: 70%;
      padding: 0 0 0 1em;

      flex: 1 1 70%;
    }
    .thread .message p:first-child {
      margin-top: 0;
    }

.thread .post {
  margin: 1em;
  width: 100%;
  background-color: rgb(51, 51, 51);
  border: 0.1em solid rgb(85, 85, 85);

  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start
  align-items: flex-start
  align-content: flex-start
}
  .thread .post header {
    background-color: rgb(85, 85, 85);
    border-bottom: 0.1em solid rgb(34, 34, 34);
  }
  .post .thumb {
    width: 30%;
    flex: 1 1 30%;
    margin-bottom: 1em;
  }
  .post .message {
    width: 70%;
    padding: 0 0 0 1em;
    flex: 1 1 70%;
    color: #fff;
  }
  .message p {
    color: #fff;
  }

/* login */
form {
  background-color: rgb(28, 28, 28);
  border: 0.1em solid rgb(109, 109, 109);
  margin: 2em 1em;
  padding: 1em;
}
form fieldset {
  margin: 1em 0 0 0;
  border: 0.1em solid rgb(85, 85, 85);
  background-color: rgb(68, 68, 68);
}
fieldset input, form textarea {
  display: block;
  margin-top: 0.5em;
  margin-bottom: 1em;
}
input[type='file'] {
  border: 0.1em solid rgb(84, 84, 84);
  padding: 1em;
}

nav.boards {

}
.board-options {
  display: block;
  background-color: hsl(0, 0%, 11%);
  border: 0.1em solid hsl(0, 0%, 43%);
  margin: 1em 1em;
  padding: 1em;
}
.del-link {
  float: right;
}

